2011-02-19 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Generation of PostScript and PDF is optional.
	  This removes dependency on GhostScript (thanks to Philipp Thomas).

2011-02-04 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Replace GPL (accidently patched in) with FreeBSD license.
	* man/man1/Makefile: Fix perl command for for DOS alike file systems
	  (Can't do inplace edit without backup.).

2011-01-31 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.2

2011-01-19 Erwin Waterlander <waterlan@xs4all.nl>
	* Update manual.

2011-01-13 Rugxulo <rugxulo@gmail.com>
	* querycp.c: Active code page detection. DOS 16 bit, OpenWatcom.

2011-01-12 Erwin Waterlander <waterlan@xs4all.nl>
	* querycp.c: Detect active code page for ISO mode on Windows.

2011-01-12 Rugxulo <rugxulo@gmail.com>
	* querycp.c: Detect active code page for ISO mode. DOS 32 bit, DJGPP.

2011-01-11 Erwin Waterlander <waterlan@xs4all.nl>
	* New ISO conversion modes DOS CP860 (Portuguese)
	  and CP863 (French Canadian).

2011-01-10 Erwin Waterlander <waterlan@xs4all.nl>
	* New ISO conversion mode DOS CP865 (Nordic).

2011-01-07 Erwin Waterlander <waterlan@xs4all.nl>
	* ISO mode CP437: fix conversion of non-breaking space (NBSP)
	* New ISO conversion modes: DOS CP850 (Western European) and Windows
	  CP1252 (Western European).
	* SunOS compatible command-line options -ascii, -iso, -7, -437, -850.

2011-01-04 Erwin Waterlander <waterlan@xs4all.nl>
	* 7bit and iso mode can be used in Mac mode.

2010-11-22 Jari Aalto <jari.aalto@cante.net>
	* Small updates man page and Makefile.

2010-11-21 Ben Pfaff <blp@cs.stanford.edu>
	* Don't indicate text files with ASCII Form Feed control
	  characters (^L) as binary.
	  Form feed characters are fairly common in GNU software text files,
	  because the GNU coding standards advice to use form feeds to
	  divide text into pages.

2010-11-15 Erwin Waterlander <waterlan@xs4all.nl>
	* Put full copyright text in *.h source files (FSF's recommendation).