@@ -62,7 +62,7 @@
 
 #define VER_AUTHOR   "Erwin Waterlander"
 
-/* #define DEBUG */
+/* #define DEBUG  1 */
 
 #if defined(DJGPP) || defined(__TURBOC__) /* DJGPP */
 #  include <dir.h>
@@ -172,6 +172,28 @@ int regfile(char *path)
 {
    struct stat buf;
 
+#if DEBUG
+   if (STAT(path, &buf) == 0)
+	{
+      fprintf(stderr, "dos2unix %s MODE 0%o ", path, buf.st_mode);
+		if (S_ISSOCK(buf.st_mode))
+         fprintf(stderr, " (socket)");
+		if (S_ISLNK(buf.st_mode))
+         fprintf(stderr, " (symbolic link)");
+		if (S_ISREG(buf.st_mode))
+         fprintf(stderr, " (regular file)");
+		if (S_ISBLK(buf.st_mode))
+         fprintf(stderr, " (block device)");
+		if (S_ISDIR(buf.st_mode))
+         fprintf(stderr, " (directory)");
+		if (S_ISCHR(buf.st_mode))
+         fprintf(stderr, " (character device)");
+		if (S_ISFIFO(buf.st_mode))
+         fprintf(stderr, " (FIFO)");
+      fprintf(stderr, "\n");
+
+	}
+#endif
    if ((STAT(path, &buf) == 0) && S_ISREG(buf.st_mode))
       return(0);
    else
@@ -249,7 +271,7 @@ void PrintVersion(void)
 #else
   fprintf(stderr, "%s", "Without native language support.\n");
 #endif
-#ifdef DEBUG
+#if DEBUG
   fprintf(stderr, "VER_AUTHOR: %s\n", VER_AUTHOR);
 #endif
 }
@@ -426,7 +448,7 @@ int ConvertDosToUnix(FILE* ipInF, FILE* ipOutF, CFlag *ipFlag)
         break;
       default: /* unknown FromToMode */
       ;
-#ifdef DEBUG
+#if DEBUG
       fprintf(stderr, _("dos2unix: program error, invalid conversion mode %d\n"),ipFlag->FromToMode);
       exit(1);
 #endif
@@ -545,7 +567,7 @@ int ConvertDosToUnixNewFile(char *ipInFN, char *ipOutFN, CFlag *ipFlag)
     RetVal = -1;
   }
 
-#ifdef DEBUG
+#if DEBUG
   fprintf(stderr, _("dos2unix: using %s as temporary file\n"), TempPath);
 #endif
 
@@ -675,7 +697,7 @@ int ConvertDosToUnixOldFile(char* ipInFN, CFlag *ipFlag)
     RetVal = -1;
 #endif
 
-#ifdef DEBUG
+#if DEBUG
   fprintf(stderr, _("dos2unix: using %s as temporary file\n"), TempPath);
 #endif
 
